src/test/resources/public/input/typechecking/pass/pass21.jova
class Evaluation{

    public int somefun(){
        return 2;
    }

    Evaluation() {
      int foo, bar, h;
      foo = 42;
      bar = somefun() + foo;
    }


}

