src/test/resources/public/input/typechecking/fail/incompatible_condition/fail04.jova
class Main {

  public int main() {
    string test;

    test = "someteststring";
	
    while(test){
      return 1;
    }
    return 0;
  }

}